# QtPredProj

./: CMakeLists.txt  FunctionalClasses.h  HeroPage.cpp  HeroPage.h  HeroPage.ui  Resources.qrc  ability.h  active.h  crest.cpp  crest.h  crestlistpage.cpp  crestlistpage.h  crestlistpage.ui  crestpage.cpp  crestpage.h  crestpage.ui  hero.h  herolistpage.cpp  herolistpage.h  herolistpage.ui  heropage  item.cpp  item.h  itemlistpage.cpp  itemlistpage.h  itemlistpage.ui  main.cpp  murdock.cpp  murdock.h  updatedcrestlistpage.cpp  updatedcrestlistpage.h  updatedcrestlistpage.ui
PredResourceFiles/: Crests.json  Items.json
